--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/Grades/Index.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/Grades/Index.cshtml
@@ -4,14 +4,14 @@
     this.ViewData["Title"] = "Бележник";
 }
 
-<p>Намерени оценки: <span id="grades-count">@Model.Grades.Count()</span></p>
+<p>Намерени оценки: <span id="grades-count">@Model.TotalGrades</span></p>
 
 <table class="table table-striped table-hover">
     <tr>
-        <th><span role="button">Учител↓</span><vc:filter-box filter-elements="Model.Filter.Teachers" type="teachers"></vc:filter-box> </th>
-        <th><span role="button">Предмет↓</span><vc:filter-box filter-elements="Model.Filter.Subjects" type="subjects"></vc:filter-box></th>
-        <th><span role="button">Причина↓</span><vc:filter-box filter-elements="Model.Filter.Reasons" type="reasons"></vc:filter-box></th>
-        <th><span role="button">Оценка↓</span><vc:filter-box filter-elements="Model.Filter.Grades" type="grades"></vc:filter-box></th>
+        <th><span role="button">Учител↓</span><vc:filter-box filter-elements="Model.Filter.Teachers" type="teachersIds"></vc:filter-box> </th>
+        <th><span role="button">Предмет↓</span><vc:filter-box filter-elements="Model.Filter.Subjects" type="subjectsIds"></vc:filter-box></th>
+        <th><span role="button">Причина↓</span><vc:filter-box filter-elements="Model.Filter.Reasons" type="reasonsIds"></vc:filter-box></th>
+        <th><span role="button">Оценка↓</span><vc:filter-box filter-elements="Model.Filter.Grades" type="gradesValues"></vc:filter-box></th>
         <th><span role="button">Дата↓</span><vc:filter-box filter-elements="Model.Filter.Dates" type="dates"></vc:filter-box></th>
     </tr>
     @foreach (var grade in Model.Grades)
@@ -36,24 +36,106 @@
     <li class="page-item next"><a class="page-link" asp-route-page="@(Model.CurrentPage + 1)">Next</a></li>
 </ul>
 
+
+
+
 @section Scripts {
+    <script>
+        //FUNCTIONS
+
+        function performAjax(queryString) {
+            $.get(`api/grades/GetFilteredGrades?${queryString}`, function (data, status) {
+                if (status == "success") {
+                    console.log(data);
+                    $('table tr:not(":first")').empty();
+                    $(".page-item").removeClass("d-none");
+                    $("#grades-count").text(data.totalGrades);
+                    for (const grade of data.grades) {
+                        $('table tbody').append(`
+                                    <tr>
+                                        <td>${grade.teacherName}</td>
+                                        <td>${grade.subjectName}</td>
+                                        <td>${grade.reasonAsString}</td>
+                                        <td>${grade.value}</td>
+                                        <td>${grade.date}</td>
+                                    </tr>`)
+                        let allPages = $(".page-item").filter(function (index) {
+                            return !$(".page-item").eq(index).hasClass("prev") && !$(".page-item").eq(index).hasClass("next");
+                        });
+
+                      
+
+                        for (let i = 0; i < allPages.length; i++) {
+                            if (i > data.totalPages - 1) {
+                                allPages.eq(i).addClass("d-none");
+                            }
+                        }
+
+                        togglePrevNext(data.currentPage, data.totalPages);
+
+
+                    }
+
+
+                }
+            });
+        }
+
+        function togglePrevNext(currentPage, lastPage) {
+            if (currentPage == 1) {
+                $(".prev").addClass("pe-none");
+            }
+            else {
+                $(".prev").removeClass("pe-none");
+            }
+
+            if (currentPage >= lastPage) {
+                $(".next").addClass("pe-none");
+            }
+            else {
+                $(".next").removeClass("pe-none");
+            }
+
+        }
+
+
+
+    </script>
+
+
     <script>
         // PAGING
         let currentPage = @Model.CurrentPage;
         let lastPage = @Model.TotalPages;
-        if (currentPage == 1) {
-            $(".prev").addClass("pe-none");
-        }
-        else {
-            $(".prev").removeClass("pe-none");
-        }
+        let queryString = '';
 
-        if (currentPage >= lastPage) {
-            $(".next").addClass("pe-none");
-        }
-        else {
-            $(".next").removeClass("pe-none");
-        }
+        togglePrevNext(currentPage,lastPage);
+
+        $(".page-link").on("click", function(e) {
+            e.preventDefault();
+            if (!$(this).closest(".page-item").hasClass("prev") && !$(this).closest(".page-item").hasClass("next")) {
+                currentPage = parseInt($(this).text());
+                
+            }
+            else {
+                if ($(this).closest(".page-item").hasClass("prev") && currentPage > 1) {
+                    currentPage -= 1;
+                }
+                else if ($(this).closest(".page-item").hasClass("next") && currentPage < lastPage) {
+                    currentPage += 1;
+                }
+            }
+
+            if (!queryString.includes("page=")) {
+                queryString += `page=${currentPage}`;
+                console.log(queryString);
+            }
+            else {
+                queryString = queryString.replace(/page=[0-9]+/i, `page=${currentPage}`);
+            }
+            performAjax(queryString);
+            
+        });
 
     </script>
 
@@ -85,16 +167,21 @@
             }
             return this;
         };
-        
         let queryTeachersArray = [];
         let querySubjectsArray = [];
         let queryReasonsArray = [];
         let queryGradesArray = [];
         let queryDate = "";
 
+        let queryObj = {
+            "teachersIds": queryTeachersArray,
+            "subjectsIds": querySubjectsArray,
+            "reasonsIds": queryReasonsArray,
+            "gradesValues": queryGradesArray,
+        };
+
         $("input:checkbox").on("change", function () {
-            let queryString = '';
-            let checkedLength = $(this).closest(".filter-box").find("input:checkbox:checked").length - 1;
+             queryString = `page=1&`;
             let checkBoxIdSplitted = $(this).attr("id").split("-");
 
             let typeClass = checkBoxIdSplitted[0];
@@ -102,22 +189,7 @@
             if ($(this).is(":checked")) {
                 if (typeClass !== "dates") {
 
-                    if (typeClass == "teachers") {
-                        queryTeachersArray.push($(this).val());
-                    }
-                    else if (typeClass == "subjects") {
-                        querySubjectsArray.push($(this).val());
-                    }
-
-                    else if (typeClass == "reasons") {
-                        queryReasonsArray.push($(this).val());
-                    }
-
-                    else if (typeClass == "grades") {
-                        queryGradesArray.push($(this).val());
-                    }
-
-
+                    queryObj[typeClass].push($(this).val());
                 }
                 else {
                     queryDate = $(this).val();
@@ -125,74 +197,30 @@
             }
             else {
                 if (typeClass !== "dates") {
-                    if (typeClass == "teachers") {
-                        queryTeachersArray.remove($(this).val());
-                    }
-                    else if (typeClass == "subjects") {
-                        querySubjectsArray.remove($(this).val());
-                    }
-
-                    else if (typeClass == "reasons") {
-                        queryReasonsArray.remove($(this).val());
-                    }
-
-                    else if (typeClass == "grades") {
-                        queryGradesArray.remove($(this).val());
-                    }
+                    queryObj[typeClass].remove($(this).val());
                 }
                 else {
                     queryDate = "";
                 }
             }
 
-            for (let i = 0; i < queryTeachersArray.length; i++) {
-                queryString += `teachersIds[${i}]=${queryTeachersArray[i]}&`
-            }
+            if (typeClass !== "dates") {
 
-
-            for (let i = 0; i < querySubjectsArray.length; i++) {
-                queryString += `subjectsIds[${i}]=${querySubjectsArray[i]}&`
-            }
-
-
-            for (let i = 0; i < queryReasonsArray.length; i++) {
-                queryString += `reasonsIds[${i}]=${queryReasonsArray[i]}&`
-            }
-
-
-            for (let i = 0; i < queryGradesArray.length; i++) {
-                queryString += `gradesIds[${i}]=${queryGradesArray[i]}&`
-            }
-
-            if (queryDate !== '') {
-                queryString += `date=${queryDate}`;
-            }
-            
-
-
-
-
-
-            // AJAX TO FILTER
-            $.get(`api/grades/GetFilteredGrades?${queryString}`, function (data, status) {
-                if (status == "success") {
-                    $('table tr:not(":first")').empty();
-                    $("#grades-count").text(data.length);
-                    for (const grade of data) {
-                        $('table tbody').append(`
-                                     <tr>
-                                         <td>${grade.teacherName}</td>
-                                         <td>${grade.subjectName}</td>
-                                         <td>${grade.reasonAsString}</td>
-                                         <td>${grade.value}</td>
-                                         <td>${grade.date}</td>
-                                     </tr>`)
+                for (const k of Object.keys(queryObj)) {
+                    for (let i = 0; i < queryObj[k].length; i++) {
+                        queryString += `${k}[${i}]=${queryObj[k][i]}&`
                     }
-            
-            
                 }
-            });
 
+            }
+            else {
+
+                if (queryDate !== '') {
+                    queryString += `date=${queryDate}`;
+                }
+            }
+            console.log(queryString);
+            performAjax(queryString);
 
 
         });
