--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/_ViewImports.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/_ViewImports.cshtml
@@ -9,5 +9,7 @@
 @using SchoolSystem.Web.WebModels
 @using SchoolSystem.Common
 @using SchoolSystem.Web.ViewModels.Questions
+@using SchoolSystem.Web.ViewModels.Students;
+@using SchoolSystem.Web.ViewModels.Home;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, SchoolSystem.Web
