Implemented teacher information and displayed on index page

--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/Home/Index.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
 
     else if (this.User.IsInRole(GlobalConstants.Teacher.TeacherRoleName))
     {
-        <vc:teacher-information></vc:teacher-information>
+        <vc:teacher-information teacher-id="@Model.TeacherId"></vc:teacher-information>
     }
 
 </div>
