--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/_ViewImports.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/_ViewImports.cshtml
@@ -11,5 +11,6 @@
 @using SchoolSystem.Web.ViewModels.Questions
 @using SchoolSystem.Web.ViewModels.Students;
 @using SchoolSystem.Web.ViewModels.Home;
+@using SchoolSystem.Web.ViewModels.Teachers;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, SchoolSystem.Web
