--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/Subjects/Add.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/Subjects/Add.cshtml
@@ -1,20 +1,20 @@
-﻿@model ClassInputModel
+﻿@model SubjectsInputModel
 
 <form method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     @for (int i = 0; i < 10; i++)
     {
-        <div class="classes-container mb-3 @(i > 0 ? "d-none" : "")">
-            <label asp-for="@(Model.ClassesIds[i])">Клас @(i + 1)</label>
-            <select class="form-select" asp-for="@(Model.ClassesIds[i])" asp-items="@(new SelectList(Model.Classes, "Id", "Name"))">
+        <div class="subjects-container mb-3 @(i > 0 ? "d-none" : "")">
+            <label asp-for="@(Model.SubjectsIds[i])">Предмет @(i + 1)</label>
+            <select class="form-select" asp-for="@(Model.SubjectsIds[i])" asp-items="@(new SelectList(Model.Subjects, "Id", "Name"))">
                 <option selected="selected" value="">Моля избери</option>
             </select>
 
            
-                @if (Html.ViewData.ModelState[$"ClassesIds[{i}]"] != null)
+                @if (Html.ViewData.ModelState[$"SubjectsIds[{i}]"] != null)
                 {
                 <ul>
-                    @foreach (var error in Html.ViewData.ModelState[$"ClassesIds[{i}]"].Errors)
+                    @foreach (var error in Html.ViewData.ModelState[$"SubjectsIds[{i}]"].Errors)
                     {
                         <li class="text-danger">@error.ErrorMessage</li>
                     }
@@ -23,7 +23,7 @@
 
         </div>
     }
-    <a class="add-more" style="cursor: pointer">Добавяне на още класове</a><br />
+    <a class="add-more" style="cursor: pointer">Добавяне на още предмети</a><br />
     <label asp-for="TeacherId"></label>
     <select class="form-select" asp-for="TeacherId" asp-items="@(new SelectList(Model.Teachers, "Id", "FullName"))"></select>
     <div class="btn-container mt-2">
@@ -36,14 +36,14 @@
         $(document).ready(function () {
             $("select:not(:first)").each(function () {
                 if ($(this).val()) {
-                    $(this).closest(".classes-container").removeClass("d-none");
+                    $(this).closest(".subjects-container").removeClass("d-none");
                 }
             });
 
             $("a.add-more").click(function () {
-                if ($(".classes-container.d-none").length > 0) {
-                    $(".classes-container.d-none:first").removeClass("d-none");
-                    if ($(".classes-container.d-none").length == 0) {
+                if ($(".subjects-container.d-none").length > 0) {
+                    $(".subjects-container.d-none:first").removeClass("d-none");
+                    if ($(".subjects-container.d-none").length == 0) {
                         $(this).addClass("d-none");
                     }
                 }
