--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/_ViewImports.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/_ViewImports.cshtml
@@ -8,8 +8,9 @@
 @using SchoolSystem.Data.Models.Enums
 @using SchoolSystem.Common
 @using SchoolSystem.Web.ViewModels.Questions
-@using SchoolSystem.Web.ViewModels.Students;
-@using SchoolSystem.Web.ViewModels.Home;
-@using SchoolSystem.Web.ViewModels.Teachers;
+@using SchoolSystem.Web.ViewModels.Students
+@using SchoolSystem.Web.ViewModels.Home
+@using SchoolSystem.Web.ViewModels.Teachers
+@using SchoolSystem.Web.ViewModels.Notifications
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, SchoolSystem.Web
