--- a/src/SchoolSystem/Web/SchoolSystem.Web/wwwroot/css/site.css
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/wwwroot/css/site.css
@@ -24,6 +24,12 @@ a {
     border-color: #1861ac;
 }
 
+.notifications-container {
+    position: absolute;
+    top: 44px;
+    right: 365px;
+}
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
