--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/_ViewImports.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/_ViewImports.cshtml
@@ -12,5 +12,6 @@
 @using SchoolSystem.Web.ViewModels.Home
 @using SchoolSystem.Web.ViewModels.Teachers
 @using SchoolSystem.Web.ViewModels.Notifications
+@using SchoolSystem.Web.ViewModels.Chat
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, SchoolSystem.Web
