Added Email Sending feature through bullt-in SmtpClient

--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/Shared/Components/Chat/Default.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/Shared/Components/Chat/Default.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<UserChatViewModel>
-
+<h5>Чат</h5>
+<h7 class="online-users">На линия (<span class="count">@(Model.Count())</span>)</h7>
 <ul class="chat-users">
     @foreach (var user in Model)
     {
