--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/Students/Ranking.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/Students/Ranking.cshtml
@@ -42,7 +42,7 @@
                                             <td>${position + 1}</td>
                                             <td>${student.fullName}</td>
                                             <td>${student.className}</td>
-                                            <td>${student.avgGrade}</td>
+                                            <td>${student.avgGrade.toFixed(2)}</td>
                                         </tr>`);
                            
                         }
