--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/_ViewImports.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/_ViewImports.cshtml
@@ -13,5 +13,6 @@
 @using SchoolSystem.Web.ViewModels.Teachers
 @using SchoolSystem.Web.ViewModels.Notifications
 @using SchoolSystem.Web.ViewModels.Chat
+@using SchoolSystem.Web.ViewModels.Contact
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, SchoolSystem.Web
