--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/Shared/_Layout.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/Shared/_Layout.cshtml
@@ -42,6 +42,9 @@
 
                             <vc:notifications></vc:notifications>
 
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="ContactUs" asp-action="Index">Контакт</a>
+                            </li>
                         }
 
                         @if (this.User.IsInRole(GlobalConstants.Student.StudentRoleName))
@@ -57,6 +60,9 @@
                             </li>
 
                             <vc:notifications></vc:notifications>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="ContactUs" asp-action="Index">Контакт</a>
+                            </li>
                         }
 
                         @if (this.User.IsInRole(GlobalConstants.Headmaster.HeadmasterRoleName))
@@ -75,9 +81,6 @@
                             <vc:notifications></vc:notifications>
                         }
 
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
